@@ -1,3 +1,11 @@
+2003-11-18  Theodore A. Roth  <troth@openavr.org>
+
+	* configure.in (AM_INIT_AUTOMAKE): Set version to 1.0.1.20031118.
+	* include/avr/crc16.h (_crc16_update): Add line break to dox.
+	(_crc_xmodem_update): Ditto.
+	(_crc_ccitt_update): New function.
+	[Submitted by Tomas Vanek <vanekt@fbl.cz>]
+
 2003-11-11  Theodore A. Roth  <troth@openavr.org>
 
 	* avr-libc.spec.in: Require doxygen 1.2.16, not 1.3.4.
